--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-parallax": "^3.5.1",
     "react-text-transition": "^3.0.2"
   }
 }
