--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "framer-motion": "^8.5.0",
     "next": "13.1.2",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
-    "react-text-transition": "^3.0.2"
+    "react-text-transition": "^3.0.2",
+    "react-twemoji": "^0.5.0"
   }
 }
