--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start --turbo",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
