--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
+    "next-page-transitions": "^1.0.0-beta.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
