--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
     "react-text-transition": "^3.0.2",
