--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.10.1",
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
+    "next-auth": "^4.19.2",
     "next-page-transitions": "^1.0.0-beta.2",
     "nprogress": "^0.2.0",
     "patch-package": "^6.5.1",
@@ -31,5 +37,8 @@
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
     "react-twemoji": "^0.5.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.10.1"
   }
 }
