--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@next/font": "13.1.2",
     "@prisma/client": "^4.10.1",
     "aos": "^2.3.4",
+    "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.5.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.2",
     "next-auth": "^4.19.2",
     "next-page-transitions": "^1.0.0-beta.2",
@@ -35,6 +38,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
+    "react-spinners": "^0.13.8",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
