--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
