--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-twemoji": "^0.5.0"
   },
   "devDependencies": {
-    "prisma": "^4.10.1"
+    "@cloudflare/next-on-pages": "^0.3.0",
+    "prisma": "^4.10.1",
+    "vercel": "^28.16.5"
   }
 }
