--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "patch-package",
-    "cloudflare:build": "node node_modules/@cloudflare/next-on-pages/bin/index.js --experimental-minify"
   },
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
@@ -44,7 +43,7 @@
     "react-spring-bottom-sheet": "^3.4.1",
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
-    "react-twemoji": "^0.5.0"
+    "react-twemoji": "^0.5.0",
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^0.3.0",
