--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "create_domain": "sls create_domain",
+    "deploy": "sls deploy"
   },
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.2",
     "@prisma/client": "^4.10.1",
+    "@vendia/serverless-express": "^4.10.1",
     "aos": "^2.3.4",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "express": "^4.18.2",
     "framer-motion": "^8.5.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -43,11 +47,16 @@
     "react-spring-bottom-sheet": "^3.4.1",
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
-    "react-twemoji": "^0.5.0"
+    "react-twemoji": "^0.5.0",
+    "serverless-domain-manager": "^6.4.4",
+    "serverless-plugin-common-excludes": "^4.0.0",
+    "serverless-plugin-include-dependencies": "^5.0.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "patch-package": "^6.5.1",
     "prisma": "^4.10.1",
+    "serverless-dotenv-plugin": "^4.0.2",
     "vercel": "^28.16.5"
   }
 }
