--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
+    "dotenv": "^16.3.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "express": "^4.18.2",
