--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.14.0",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/utils": "^5.13.7",
     "@next/font": "13.1.2",
     "@prisma/client": "^4.10.1",
     "@vendia/serverless-express": "^4.10.1",
@@ -31,6 +33,8 @@
     "framer-motion": "^8.5.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.1.2",
     "next-auth": "^4.19.2",
     "next-page-transitions": "^1.0.0-beta.2",
@@ -52,7 +56,8 @@
     "serverless-domain-manager": "^6.4.4",
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-include-dependencies": "^5.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "patch-package": "^6.5.1",
