--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "13.1.2",
     "@prisma/client": "^4.10.1",
     "@vendia/serverless-express": "^4.10.1",
+    "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
