--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
     "react-spinners": "^0.13.8",
