우산 대여 화면 수정

--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
     "react-spinners": "^0.13.8",
+    "react-spreadsheet": "^0.8.3",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
     "react-twemoji": "^0.5.0",
+    "scheduler": "^0.23.0",
     "serverless-domain-manager": "^6.4.4",
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-include-dependencies": "^5.0.0",
