--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/utils": "^5.13.7",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "13.1.2",
     "@prisma/client": "^4.10.1",
     "@vendia/serverless-express": "^4.10.1",
@@ -53,6 +54,7 @@
     "react-spinners": "^0.13.8",
     "react-spreadsheet": "^0.8.3",
     "react-spring-bottom-sheet": "^3.4.1",
+    "react-table": "^7.8.0",
     "react-text-transition": "^3.0.2",
     "react-transition-group": "^4.4.5",
     "react-twemoji": "^0.5.0",
