--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-modal": "^3.16.1",
     "react-modern-drawer": "^1.2.0",
     "react-parallax": "^3.5.1",
+    "react-player": "^2.15.1",
     "react-spinners": "^0.13.8",
     "react-spreadsheet": "^0.8.3",
     "react-spring-bottom-sheet": "^3.4.1",
