--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "axios": "^1.3.3",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
     "dotenv": "^16.3.1",
@@ -43,6 +44,7 @@
     "nprogress": "^0.2.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hot-toast": "^2.4.0",
