--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
