--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "13.1.2",
     "next-auth": "^4.19.2",
     "next-page-transitions": "^1.0.0-beta.2",
+    "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
