--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && prisma generate",
     "create_domain": "sls create_domain",
     "deploy": "sls deploy"
   },
